--- a/thesis.tex
+++ b/thesis.tex
@@ -89,7 +89,7 @@
 \usepackage{notations} % MDH: So I don't have to repeat myself so much
 \usepackage{hhline}  % MDH: For double lines in tables
 \usepackage{tkz-euclide}  % MDH: To make it easier to label points in Tikz
-
+\usepackage{xfrac}  % MDH: Additional fraction commands
 
 % To control where figures are output
 \usepackage{epstopdf}
