--- a/notations.sty
+++ b/notations.sty
@@ -49,7 +49,7 @@ type them, reducing mistakes and making it easier to change them.]
 \newcommand*{\gaussian}[2]{\ensuremath{\mathcal{N}{\left(#1, #2\right)}}}
 \newcommand*{\lossof}[1]{\ensuremath{\loss{\left(#1\right)}}}
 \newcommand*{\truthof}[1]{\ensuremath{\truth{\left(#1\right)}}}
-\newcommand*{\uniform}[2]{\ensuremath{\mathcal{U}_{[#1, #2]}}}
+\newcommand*{\uniform}[2]{\ensuremath{\mathcal{U}_{\left[ #1, #2 \right]}}}
 \newcommand*{\weightof}[1]{\ensuremath{\weight{\left(#1\right)}}}
 
 % Distributions
