--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -483,14 +483,13 @@ be allotted before more proxies cease to be useful?
 
 
 \section{Proposed Work}\label{sec:contribution}
-\vicki{
-    Try to be more specific about what you will do.
-    You could even give a few results, while explaining how you intend to extend them.
-    Because I'm not sure the extent of your plans, I keep seeing other possibilities:
-    See the document "Previous Work Summary" in the Voting Articles folder.
-}
+% \vicki{
+%     Try to be more specific about what you will do.
+%     You could even give a few results, while explaining how you intend to extend them.
+%     Because I'm not sure the extent of your plans, I keep seeing other possibilities:
+%     See the document "Previous Work Summary" in the Voting Articles folder.
+% }
 % \section{Contribution}\label{sec:contribution}
-
 This study will explore how proxy voting affects the vote.
 We will look at the difference in outcome between a direct vote using all agents that
 can vote in person, and proxy voting where the agents that can not attend in person
