Added blurb about discussion

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -260,6 +260,9 @@ those who did vote in the extremes, making the voice of the centrist voters less
 With the refactoring option, however, if the population is truly ambivalent to the
 topic they would be encouraged to vote towards the center in order to show they want
 to rework the law.
+This reopens discussion and allows for a more educative process, with the hope that
+as more discussion occurs the population will become more informed and result in a
+better law.
 
 This study also makes use of \textit{voting mechanisms} or \textit{voting rules},
 which are functions that map a set of preferences in~\systemspace\ to an outcome that
