Added some about Fearon1998

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -483,6 +483,19 @@ As such, we ask, if voters can delegate more than one proxy, how many proxies sh
 be allotted before more proxies cease to be useful?
 
 % TODO: Shotgun more previous work here
+James Fearon~\cite{Fearon1998} described how cooperation often occurs in two phases:
+bargaining and enforcement.
+The bargaining phase involves negotiation and determining the terms of an arrangement,
+while the enforcement phase involves ensuring that the terms of the arrangement are met.
+Generally votes take place at the end of the bargaining phase, and the result is the
+agreement to be used in the enforcement phase.
+We plan to expand voting to feed back into the bargaining phase by allowing voters to
+express their dissatisfaction with either side of an issue by voting towards the
+center of the interval.
+If enough agents vote towards the center, the bargaining phase can be restarted to
+allow more negotiation, thereby facilitating deliberation.
+
+
 
 
 \section{Proposed Work}\label{sec:contribution}
