--- a/references/research.bib
+++ b/references/research.bib
@@ -234,6 +234,21 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   year      = {2021},
 }
 
+@Article{Fearon1998,
+  author    = {James D. Fearon},
+  title     = {Bargaining, Enforcement, and International Cooperation},
+  issn      = {00208183, 15315088},
+  number    = {2},
+  pages     = {269--305},
+  url       = {http://www.jstor.org/stable/2601276},
+  urldate   = {2022-11-27},
+  volume    = {52},
+  abstract  = {Neoliberals and their neorealist critics have debated the relative importance of two main obstacles to international cooperation-problems of cheating and enforcement and problems of relative gains. By contrast, I argue that problems of international cooperation have a common strategic structure in which a third, distinct obstacle plays a crucial role. Almost regardless of the issue area, states must first resolve the bargaining problem of agreeing on terms before they can implement and begin to enforce an agreement. Furthermore, the bargaining and enforcement problems interact. Using a game model, I show that if states must bargain to determine the deal to be enforced, the "shadow of the future" cuts two ways. A high expectation of continued interactions may make enforcing the agreelnent easier, but it can also give states an incentive to bargain harder, delaying agreement in hopes of getting a better deal. Empirical evidence from trade and arms control negotiations suggests that this mechanism may help to explain the costly standoffs that are often observed in international politics and are problematic for received neoliberal theories.},
+  journal   = {International Organization},
+  publisher = {[MIT Press, University of Wisconsin Press, Cambridge University Press, International Organization Foundation]},
+  year      = {1998},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectoryLatex-micha-CrimsonSpace:D:\\Projects\\Thesis-Experiments\\Report;}
