Update on Overleaf.

--- a/abstract.tex
+++ b/abstract.tex
@@ -35,6 +35,7 @@
     Finally, we attempt to determine how many proxies a voter should be allowed
     to delegate for an individual vote in order to increase the accuracy of the system
     as compared to proxy voting with a single proxy.
+    /Vicki{Need to make it clear we are talking about a single vote being divided between multiple proxies.}
     % TODO: Put in a bit of what we discover
 
 
