Update on Overleaf.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -291,6 +291,7 @@ These mechanisms include
 \end{itemize}
 All of these mechanisms determine the weight of an active voter, then  apply a
 weighted mean to the voters' preferences to determine the outcome.
+\Vicki{An example would help.}
 
 Candidate mechanisms, on the other hand, involve selecting a single proxy out of all
 active voters and using its preference as the outcome.
