Update on Overleaf.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -351,7 +351,7 @@ Additionally, the resolution currently requires the delegate to vote exactly as 
 specific instructions provided by the delegating voter tells them to
 vote~\cite{CERP2020, Congress.gov2020}.
 This essentially turns proxy into a relay for the delegating voter, which is not how
-proxy voting is typically used and is not particularly useful.
+proxy voting is typically used and is not particularly useful. \Vicki{Explain what you mean by useful.}
 Instead, we consider scenarios where actual proxy voting is used, where the proxy
 receives the voting power of the delegating voter, increasing their weight, and
 proceeds to votes according to their own preference.
