--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -360,7 +360,7 @@ to how they would as possible if only they were able to participate in the direc
 similar to selecting experts as described in~\cite{Miller1969} and~\cite{Mueller1972}.
 
 Second, we assume that each voter has perfect knowledge of potential proxies' opinions.
-This will allow them to choose the proxy that has the most similar opinion to their own.
+This will allow them to choose the proxy that has the opinion most similar to their own.
 While in reality voters will likely not have perfect knowledge of others' opinions,
 it is often not particularly difficult to gauge the opinion of others, especially
 those with whom an individual often associates, and so we believe this assumption is
