Update on Overleaf.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -459,6 +459,7 @@ size, as well as explore other possible voting mechanisms.
 
 This study will additionally look at voting mechanisms and attempt to determine which
 mechanism is best suited for proxy voting.
+|Vicki{Lear }
 This is not unlike~\cite{Mathur2017}, who looked at several voting mechanisms applied
 on a single-winner election vote and determined a ranking for these mechanisms.
 In their work, they discover that the Schulze and Minimax voting mechanisms always
