Update on Overleaf.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -459,10 +459,11 @@ size, as well as explore other possible voting mechanisms.
 
 This study will additionally look at voting mechanisms and attempt to determine which
 mechanism is best suited for proxy voting.
-|Vicki{Lead with what others have done}
+|Vicki{Lead with what others have done. Then in a sentence or two say why yours will differ.}
 This is not unlike~\cite{Mathur2017}, who looked at several voting mechanisms applied
 on a single-winner election vote and determined a ranking for these mechanisms.
-In their work, they discover that the Schulze and Minimax voting mechanisms always
+In their work, they discover that the Schulze
+\and Minimax voting mechanisms always
 agree and beat all other mechanisms tested, while Borda beats Copeland and Plurality,
 and Plurality comes in last.
 Our work will differ significantly from theirs, however, as we will explore voting
