Update on Overleaf.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -463,8 +463,9 @@ mechanism is best suited for proxy voting.
 This is not unlike~\cite{Mathur2017}, who looked at several voting mechanisms applied
 on a single-winner election vote and determined a ranking for these mechanisms.
 In their work, they discover that the Schulze
-\vicki{Breiflyand Minimax voting mechanisms always
-agree and beat all other mechanisms tested, while Borda beats Copeland and Plurality,
+\vicki{Briefly explain these voting mechanisms} and Minimax voting mechanisms always
+agree and beat all other mechanisms tested, while Borda beats 
+\Vicki{Quantify "beats"} Copeland and Plurality,
 and Plurality comes in last.
 Our work will differ significantly from theirs, however, as we will explore voting
 mechanisms used under proxy voting instead of single-winner elections, and most of
