--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -468,7 +468,8 @@ agree and beat all other mechanisms tested, while Borda beats
 \Vicki{Quantify "beats"} Copeland and Plurality,
 and Plurality comes in last.
 Our work will differ significantly from theirs, however, as we will explore voting
-mechanisms used under proxy voting instead of single-winner elections, and most of
+mechanisms used under proxy voting instead of single-winner elections
+\Vicki{Why does proxy have to dif, and most of
 our mechanisms will be different due the mechanisms they used not being beneficial on
 a continuous preference space or with a small number of candidates, or not working well
 with proxy voting.
