Update on Overleaf.

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -469,7 +469,7 @@ agree and beat all other mechanisms tested, while Borda beats
 and Plurality comes in last.
 Our work will differ significantly from theirs, however, as we will explore voting
 mechanisms used under proxy voting instead of single-winner elections
-\Vicki{Why does proxy have to differ from , and most of
+\Vicki{Why does proxy have to differ from singl, and most of
 our mechanisms will be different due the mechanisms they used not being beneficial on
 a continuous preference space or with a small number of candidates, or not working well
 with proxy voting.
